third_party/move/move-compiler-v2/tests/more-v1/expansion/use_nested_self_as_invalid2.exp

Diagnostics:
warning: unused alias
  ┌─ tests/more-v1/expansion/use_nested_self_as_invalid2.move:8:26
  │
8 │     use 0x2::X::{Self as B, foo, S};
  │                          ^ Unused 'use' of alias 'B'. Consider removing it

error: variants not allowed in this context
   ┌─ tests/more-v1/expansion/use_nested_self_as_invalid2.move:10:19
   │
10 │     struct X { f: X::S, f2: S }
   │                   ^^^^
